# ChangeLog for sci-visualization/gwyddion
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-visualization/gwyddion/ChangeLog,v 1.15 2008/12/03 22:36:31 maekke Exp $

  03 Dec 2008; Markus Meier <maekke@gentoo.org> gwyddion-2.10.ebuild:
  amd64/x86 stable, bug #249408

  03 Dec 2008; Sébastien Fabbro <bicatali@gentoo.org> gwyddion-2.10.ebuild:
  Added --enable-library-bloat, necessary for as-needed

*gwyddion-2.10 (04 Aug 2008)

  04 Aug 2008; Markus Dittrich <markusle@gentoo.org> +gwyddion-2.10.ebuild:
  Version bump (fixes bug #233355).

  21 Apr 2008; Sébastien Fabbro <bicatali@gentoo.org> gwyddion-2.5.ebuild,
  gwyddion-2.9.ebuild:
  Re-organized dependencies for pkg-config (bug #217278)

*gwyddion-2.9 (07 Jan 2008)

  07 Jan 2008; Markus Dittrich <markusle@gentoo.org> +gwyddion-2.9.ebuild:
  Version bump.

  07 Jan 2008; Markus Dittrich <markusle@gentoo.org> gwyddion-2.5.ebuild:
  Added pkconfig dependency (fixes bug #204722).

  11 Jun 2007; Marcus D. Hanwell <cryos@gentoo.org> -gwyddion-2.2.ebuild,
  gwyddion-2.5.ebuild:
  Marked stable on amd64, removed old version.

  08 Apr 2007; Marcus D. Hanwell <cryos@gentoo.org> gwyddion-2.2.ebuild:
  Marked stable on amd64.

*gwyddion-2.5 (08 Apr 2007)

  08 Apr 2007; Marcus D. Hanwell <cryos@gentoo.org> -gwyddion-1.16.ebuild,
  -gwyddion-2.0.ebuild, +gwyddion-2.5.ebuild:
  Version bump, closes bug 170318.

*gwyddion-2.2 (27 Dec 2006)

  27 Dec 2006; Marcus D. Hanwell <cryos@gentoo.org> +gwyddion-2.2.ebuild:
  Version bump.

*gwyddion-2.0 (01 Nov 2006)

  01 Nov 2006; Marcus D. Hanwell <cryos@gentoo.org> -gwyddion-1.15.ebuild,
  +gwyddion-2.0.ebuild:
  Version bump (bug 150735), and removed old version.

*gwyddion-1.16 (15 Jul 2006)

  15 Jul 2006; Marcus D. Hanwell <cryos@gentoo.org> +gwyddion-1.16.ebuild:
  Version bump.

  29 Jan 2006; Marcus D. Hanwell <cryos@gentoo.org> +metadata.xml,
  +gwyddion-1.15.ebuild: