@@ -2,17 +2,15 @@
 Hash: SHA1
 
 DIST gwyddion-2.10.tar.bz2 2425036 RMD160 a4c32fefe9c31c1aee9169cad6399f25ec3bbff6 SHA1 186d0cc03edefd807b33efdbb6d59cc7f98fdad6 SHA256 90bde6f10e38c563886251984c60d32155119601e400f97a0cd59b7378a740eb
-DIST gwyddion-2.5.tar.bz2 2085657 RMD160 8be42bb051997f15e8c4c86c59742059783102ba SHA1 c575797512afbcc00590d0253ae904500343e364 SHA256 22c9f616a44e0328d577e506aef81d90b20b9838a6ffc4bc880d0784d3283ae1
-DIST gwyddion-2.9.tar.bz2 2330381 RMD160 9d9dfea2fe6e72c1b716d86720d79317308caf1b SHA1 47912e378ef994e6438e02e4fab5db495877b618 SHA256 e619f2a0a7a8d1bf37b982893e3953b5d4a77a729716442504b9ca1485c983ff
-EBUILD gwyddion-2.10.ebuild 1119 RMD160 0d00d1a5afdff017043f08ec983d88449e7546cd SHA1 6bed6253c85e8fc5bea227fc2e2be83dbf56b12f SHA256 d12d482b15bb065fce425351ae3b5e7564114b06e1c0022a3301f47565cdfbb6
-EBUILD gwyddion-2.5.ebuild 974 RMD160 68f43965b2e20b027df6bdf6824c080e62983328 SHA1 b6943df7dbe45018c501f1f65cc1295fa09cf2ea SHA256 b812addbdc8675337cffc76ae9070955ac1523eb839a5f89361f68094ee54fb4
-EBUILD gwyddion-2.9.ebuild 1007 RMD160 4dea5448d6ac8ae18a01bb940ca8e13e9231940e SHA1 d9b674cc3abfb495f6083e564b1d4e1752dcfe24 SHA256 8f66f8e81de458081a0ba8173873948ecabb08f1c27bc84537d352d4b17763e1
-MISC ChangeLog 2742 RMD160 a00112dc74f3c532b50316cfc98476779f68147a SHA1 fdb942118f1253c01ec2b9afe25bf540624b58e4 SHA256 a5e525cff89713bf713ef9400e16d38dd95670987ca28c40c7aaed95b43e4ed0
-MISC metadata.xml 557 RMD160 275cbb6542e6af1d71e051c87c8080e2ade0a3a9 SHA1 325d6404aa11a93a377402e42a156edde187183b SHA256 baf6898f6825a6a2ef6bd47265f8c34b52f5b3a5c48e10c8f995e20a729f9259
+DIST gwyddion-2.12.tar.bz2 2596390 RMD160 8e700b5062c2842e239a153fe0062d21229eb692 SHA1 ebaf2dfbe080e030092a4e42111b0f2cc39dd2ad SHA256 c29f94a8e4e17bf8013b10b78dca6942e508f69eebe343c9c466aa3982b5822b
+EBUILD gwyddion-2.10.ebuild 1142 RMD160 163e3061b6c11d511a891ca50df6b7815c254f00 SHA1 d9836a55080c426fc5e56ff6aac46788c90533bf SHA256 d3960aecf18c07f44835a7413d946c25d532192ce62079f0272d8ac4ab7f02d2
+EBUILD gwyddion-2.12.ebuild 1850 RMD160 d05754b02b59685b4d60105d51441ff24141e890 SHA1 0ccf1b8ef47bf431348e8d5059724325447ef8ca SHA256 8c7cd99c2a8e7bc352733b0c96185bc20e6dbc6408b5a0a096a2fffdf154a87f
+MISC ChangeLog 2952 RMD160 81fccdf360bfb7b46cff672aca51d33cec2949ca SHA1 c0dcd010307bcbe014a325792d81bb8571c8e0e3 SHA256 744937b847d1fbc5b0e17b060e74d1b22b5efa37ee4dd660c1e7de07bc1700ff
+MISC metadata.xml 675 RMD160 116a1443681d64456d3678076d1f810536939c45 SHA1 13c99e8cc86bc65b8933e78d859fd23de95ebe4e SHA256 51cc4e17d261d1d45aacb485b7852efe95e2e48a8feb70fb6b1bafab376c4a2b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkk3CfYACgkQkKaRLQcq0GJlEgCgtPKUPmXwlngheIcJ6+2RBX+E
-0I8An1joPT9Lebm+4uNRnyqQOd6XZlaK
-=hPBP
+iEYEARECAAYFAkmFksAACgkQ1ycZbhPLE2BFSACfT8tRTCA6Zp8SHmj3OwdAoXwT
+Fi0An0OgXP9UAfIVyXNpzFCNLQT+Q5nU
+=Q9fj
 -----END PGP SIGNATURE-----
