@@ -7,8 +7,12 @@
   </maintainer>
   <longdescription>
     Gwyddion is a modular program for SPM data analysis. Primarily it is
-	supposed to be used for analysis of height fields obtained by means of
-	scanning probe microscopy techniques (AFM, MFM, STM, NSOM), but generally it
-	can be used for any other height field analysis or image analysis.
+    supposed to be used for analysis of height fields obtained by means of
+    scanning probe microscopy techniques (AFM, MFM, STM, NSOM), but
+    generally it can be used for any other height field analysis or
+    image analysis.
   </longdescription>
+  <use>
+    <flag name="sourceview">Enable support for <pkg>x11-libs/gtksourceview</pkg></flag>
+  </use>
 </pkgmetadata>
